<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="org.mdsd2016.android.dummyservice.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nothing_to_be_shown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/edt_type_sth" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginStart="47dp"
            android:layout_marginTop="52dp"
            android:text=">>"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_start_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_service" />

        <Button
            android:id="@+id/btn_start_bound_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_bound_service" />

        <Button
            android:id="@+id/btn_start_internet_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_internet_service" />
    </LinearLayout>
</LinearLayout>
